Bildnachweis und Lizenz-Info

--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@ $\,$\\[6cm]
 %% Hook: 
 \begin{frame}
 \frametitle{Häufig gestellte Fragen zum Thema Schmerz}
-\pause
+
 
 \begin{itemize}
 \item
@@ -104,6 +104,197 @@ Wie funktionieren Phantomschmerzen?
 \end{center}
 
 \end{frame}
+
+
+
+%% Lernziele
+
+\begin{frame}
+
+
+ \frametitle{Nach dieser Vorlesung sollten Sie folgendes können}
+
+
+
+\begin{block}{Grundlagen:}
+
+
+
+
+\begin{itemize}
+
+    \item 
+    
+Arten von Nozizeptoren beschreiben und erklären
+    \item 
+ schnellen und langsamen Schmerz unterscheiden und deren neurobiologische Grundlagen erläutern
+    \item 
+ endogene Mediatoren der Nozizeptorerregung benennen und erläutern
+    \item 
+ primäre und sekundäre Hyperalgesie unterscheiden
+    \item 
+ Neuropeptide beschreiben, die aus Nozizeptoren freigesetzt werden und deren Wirkung erläutern
+    \item 
+ neurogene Vasodilatation und Entzündung erläutern
+    \item 
+ Aufsteigende Schmerzbahnen beschreiben
+    \item 
+ die Schmerzübertragung bei viszeraler Nozizeption erklären und Head-Zonen beschreiben
+    \item 
+erklären, welche  Hirnregionen an der Schmerzempfindung teilhaben
+    \item 
+ projizierten Schmerz definieren
+
+\end{itemize}
+
+
+\end{block}
+
+\end{frame}
+
+
+\begin{frame}
+
+
+%% Lernziele
+ \frametitle{Nach dieser Vorlesung sollten Sie folgendes können}
+ 
+
+\begin{block}{Klinik:}
+
+\begin{itemize}
+    
+\item 
+die Wirkung von peripheren Analgetika erklären
+    \item 
+ Phantomschmerzen erklären
+    \item 
+ Beispiele für Krankheiten mit erhöhtem und vermindertem Schmerzempfinden geben. 
+
+\end{itemize}
+
+
+\end{block}
+
+
+
+\end{frame}
+
+
+%%% Main Body
+
+
+
+%% Review
+
+\begin{frame}
+
+
+ \frametitle{Jetzt* sollten Sie folgendes können}
+
+
+
+\begin{block}{Grundlagen:}
+
+
+
+
+\begin{itemize}
+
+    \item 
+    
+Arten von Nozizeptoren beschreiben und erklären
+    \item 
+ schnellen und langsamen Schmerz unterscheiden und deren neurobiologische Grundlagen erläutern
+    \item 
+ endogene Mediatoren der Nozizeptorerregung benennen und erläutern
+    \item 
+ primäre und sekundäre Hyperalgesie unterscheiden
+    \item 
+ Neuropeptide beschreiben, die aus Nozizeptoren freigesetzt werden und deren Wirkung erläutern
+    \item 
+ neurogene Vasodilatation und Entzündung erläutern
+    \item 
+ Aufsteigende Schmerzbahnen beschreiben
+    \item 
+ die Schmerzübertragung bei viszeraler Nozizeption erklären und Head-Zonen beschreiben
+    \item 
+erklären, welche  Hirnregionen an der Schmerzempfindung teilhaben
+    \item 
+ projizierten Schmerz definieren
+
+\end{itemize}
+
+
+\end{block}
+
+\end{frame}
+
+
+\begin{frame}
+
+
+ \frametitle{Jetzt* sollten Sie folgendes können}
+ 
+
+\begin{block}{Klinik:}
+
+\begin{itemize}
+    
+\item 
+die Wirkung von peripheren Analgetika erklären
+    \item 
+ Phantomschmerzen erklären
+    \item 
+ Beispiele für Krankheiten mit erhöhtem und vermindertem Schmerzempfinden geben. 
+
+\end{itemize}
+
+
+\end{block}
+
+
+$\,$\\[1cm]
+\textcolor{theme}{Welche Fragen haben Sie?}
+
+
+\end{frame}
+
+\begin{frame}
+ 
+\frametitle{Bildnachweis}
+ 
+\begin{tiny}
+  
+
+\begin{itemize}
+% \item
+% Head-Zonen. OpenStax College - Autonomic Reflexes and Homeostasis  \url{http://cnx.org/content/m46579/1.2/}, CC BY 3.0, \url{https://commons.wikimedia.org/w/index.php?curid=30017359}
+% \item
+% Innere Organe.  Sue Clark - Flickr: View of Viscera Page 82, Public Domain, \url{https://commons.wikimedia.org/w/index.php?curid=16128601}
+% \item
+% Ionenkanal.  Original uploader was Outslider (Paweł Tokarz) at pl.wikipedia - Transferred from pl.wikipedia to Commons by Masur using CommonsHelper., Public Domain, \url{https://commons.wikimedia.org/w/index.php?curid=5828577}
+% \item
+% Joe Thomas und Simone Biles. Erik Drost, CC BY 2.0 \url{https://creativecommons.org/licenses/by/2.0}, via Wikimedia Commons
+\item
+Kaktus. Photo by \href{https://unsplash.com/@earl_plannerzone?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Earl Wilcox} on \href{https://unsplash.com/s/photos/pain?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Unsplash}
+% \item
+% Prostaglandin-Synthese. Eigenes Bild, 2021. CC BY-SA 3.0.
+\item
+Schmerzleitung (und Ausschnitte davon). Eigene Bilder, 2021, CC BY 4.0 \url{https://creativecommons.org/licenses/by/4.0} nach einem Bild von Richard Lennertz,  Wikimedia Commons
+% \item
+% Sonnenbrand. By Phil Kates - \url{https://www.flickr.com/photos/hawk684/108139247/}, CC BY-SA 2.0, \url{https://commons.wikimedia.org/w/index.php?curid=51031248}
+% \item
+% Substanz P. Fvasconcellos - Own work, Public Domain, \url{https://commons.wikimedia.org/w/index.php?curid=1017110}
+% \item
+% TRPV1. Von The Author 2011. Published by Oxford University Press - \url{https://www.ncbi.nlm.nih.gov/core/lw/2.0/html/tileshop_pmc/tileshop_pmc_inline.html?title=Click on image to zoom&p=PMC3&id=3169333_aer26002.jpg}
+% CC BY-SA 2.5, \url{https://commons.wikimedia.org/w/index.php?curid=34131563}
+\end{itemize}
+
+\end{tiny}
+
+\end{frame}
+
 
 
 
@@ -644,41 +835,6 @@ Wie funktionieren Phantomschmerzen?
 
 
 
-
-% \begin{frame}
- 
-% \frametitle{Bildnachweis}
- 
-% \begin{tiny}
-  
-
-% \begin{itemize}
-% \item
-% Head-Zonen. OpenStax College - Autonomic Reflexes and Homeostasis  \url{http://cnx.org/content/m46579/1.2/}, CC BY 3.0, \url{https://commons.wikimedia.org/w/index.php?curid=30017359}
-% \item
-% Innere Organe.  Sue Clark - Flickr: View of Viscera Page 82, Public Domain, \url{https://commons.wikimedia.org/w/index.php?curid=16128601}
-% \item
-% Ionenkanal.  Original uploader was Outslider (Paweł Tokarz) at pl.wikipedia - Transferred from pl.wikipedia to Commons by Masur using CommonsHelper., Public Domain, \url{https://commons.wikimedia.org/w/index.php?curid=5828577}
-% \item
-% Joe Thomas und Simone Biles. Erik Drost, CC BY 2.0 \url{https://creativecommons.org/licenses/by/2.0}, via Wikimedia Commons
-% \item
-% Kaktus. Photo by \href{https://unsplash.com/@earl_plannerzone?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Earl Wilcox} on \href{https://unsplash.com/s/photos/pain?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Unsplash}
-% \item
-% Prostaglandin-Synthese. Eigenes Bild, 2021. CC BY-SA 3.0.
-% \item
-% Schmerzleitung. Eigenes Bild, 2021, CC BY 4.0 \url{https://creativecommons.org/licenses/by/4.0} nach einem Bild von Richard Lennertz,  Wikimedia Commons
-% \item
-% Sonnenbrand. By Phil Kates - \url{https://www.flickr.com/photos/hawk684/108139247/}, CC BY-SA 2.0, \url{https://commons.wikimedia.org/w/index.php?curid=51031248}
-% \item
-% Substanz P. Fvasconcellos - Own work, Public Domain, \url{https://commons.wikimedia.org/w/index.php?curid=1017110}
-% \item
-% TRPV1. Von The Author 2011. Published by Oxford University Press - \url{https://www.ncbi.nlm.nih.gov/core/lw/2.0/html/tileshop_pmc/tileshop_pmc_inline.html?title=Click on image to zoom&p=PMC3&id=3169333_aer26002.jpg}
-% CC BY-SA 2.5, \url{https://commons.wikimedia.org/w/index.php?curid=34131563}
-% \end{itemize}
-
-% \end{tiny}
-
-% \end{frame}
 
 
 
