--- a/main.tex
+++ b/main.tex
@@ -184,6 +184,35 @@ die Wirkung von peripheren Analgetika erklären
 %%% Main Body
 
 
+%%%% IMPP Frage
+
+\begin{frame}{IMPP Frage}
+
+
+Ein 60-jähriger Patient hat u.a. Schmerzen in der linken Schulter, die in den linken Arm ausstrahlen. Ein EKG bestätigt den Verdacht auf einen Herzinfarkt. Dieses Schmerzphänomen im linken Arm bei einem Myokardinfarkt wird (von den angegebenen Begriffen) am besten bezeichnet als 
+
+\begin{description}
+    \item[A.] emotionale Schmerzkomponente
+    \item[B.] kognitive Schmerzkomponente
+    \item[C.] neuropathischer Schmerz
+    \item[D.] Phantomschmerz
+    \item[E.] übertragener Schmerz
+\end{description}
+    
+\end{frame}
+
+\begin{frame}
+\frametitle{Erinnerung: Übertragener Schmerz/Head-Zonen}
+
+
+
+\begin{center}
+\includegraphics[width=0.9\textwidth]{Referred_Pain_Chart.jpg}
+\end{center}
+
+\end{frame}
+
+
 
 %% Review
 
@@ -268,8 +297,8 @@ $\,$\\[1cm]
   
 
 \begin{itemize}
-% \item
-% Head-Zonen. OpenStax College - Autonomic Reflexes and Homeostasis  \url{http://cnx.org/content/m46579/1.2/}, CC BY 3.0, \url{https://commons.wikimedia.org/w/index.php?curid=30017359}
+\item
+Head-Zonen. OpenStax College - Autonomic Reflexes and Homeostasis  \url{http://cnx.org/content/m46579/1.2/}, CC BY 3.0, \url{https://commons.wikimedia.org/w/index.php?curid=30017359}
 % \item
 % Innere Organe.  Sue Clark - Flickr: View of Viscera Page 82, Public Domain, \url{https://commons.wikimedia.org/w/index.php?curid=16128601}
 % \item
