pdf versions for live session and for upload

--- a/main.tex
+++ b/main.tex
@@ -967,6 +967,8 @@ Ein 60-jähriger Patient hat u.a. Schmerzen in der linken Schulter, die in den l
     
 \end{frame}
 
+
+%% Spoiler Alert
 \begin{frame}
 \frametitle{Erinnerung: Übertragener Schmerz/Head-Zonen}
 
@@ -977,6 +979,7 @@ Ein 60-jähriger Patient hat u.a. Schmerzen in der linken Schulter, die in den l
 \end{center}
 
 \end{frame}
+%%  End Spoiler Alert
 
 
 
